fix: avoid overflow in api history when json contain long string values
(cherry picked from commit 2aa511d001c0c416806acecde154efea05d1605b)

--- a/gravitee-apim-console-webui/src/management/api/audit/history/_apiHistory.scss
+++ b/gravitee-apim-console-webui/src/management/api/audit/history/_apiHistory.scss
@@ -78,6 +78,7 @@ pre.api-history-definition {
   background-color: transparent !important;
   border: none !important;
   max-height: calc(100vh - 170px);
+  white-space: pre-wrap;
 }
 
 .api-history-icon {
